# Autonomous_kcg

./: README.md
ROS2Sample/src/cognata_sdk_ros2/: CMakeLists.txt  package.xml
ROS2Sample/src/cognata_sdk_ros2/include/: keyPress.hpp  ros2_sample.hpp  ros_utility_funcs.hpp  sensors.hpp
ROS2Sample/src/cognata_sdk_ros2/include/SDKIncludes/: ClientToEngineMessage.pb.h  CognataSim.h  CognataSocket.h  DrivingCommand.pb.h  EngineToClientMessage.pb.h  ErrorCodes.pb.h  MathUtils.h  sts_net.h
ROS2Sample/src/cognata_sdk_ros2/include/SDKIncludes/google/protobuf/: arenastring.h  descriptor.pb.h  descriptor_database.h  duration.pb.h  field_mask.pb.h  generated_enum_util.h  generated_message_reflection.h  generated_message_util.h  map.h  map_entry.h  map_entry_lite.h  message.h  message_lite.h  port_def.inc  port_undef.inc  text_format.h  unknown_field_set.h  wire_format_lite.h  wrappers.pb.h
ROS2Sample/src/cognata_sdk_ros2/include/SDKIncludes/google/protobuf/compiler/: plugin.pb.h
ROS2Sample/src/cognata_sdk_ros2/include/SDKIncludes/google/protobuf/stubs/: common.h  mutex.h  port.h
ROS2Sample/src/cognata_sdk_ros2/include/SDKIncludes/google/protobuf/util/: time_util.h
ROS2Sample/src/cognata_sdk_ros2/install/: local_setup.sh  setup.sh
ROS2Sample/src/cognata_sdk_ros2/install/cognata_sdk_ros2/include/cognata_sdk_ros2/msg/: annotation_msg.h  (+1 more)
ROS2Sample/src/cognata_sdk_ros2/install/cognata_sdk_ros2/share/cognata_sdk_ros2/: package.bash  package.sh
ROS2Sample/src/cognata_sdk_ros2/log/: latest_build
ROS2Sample/src/cognata_sdk_ros2/msg/: WheelTelemetries.msg
ROS2Sample/src/cognata_sdk_ros2/src/: main.cpp
ROS2Sample/src/msgs/tracked_lane_msgs/: CMakeLists.txt
ROS2Sample/src/msgs/tracked_lane_msgs/msg/: Lane.msg
follower_ws/src/trajectory_following/: CMakeLists.txt  package.xml  trajectory_following_instructions.md
follower_ws/src/trajectory_following/include/trajectory_following/: trajectory_following.hpp
follower_ws/src/trajectory_following/launch/: simple_trajectory_following.launch.py  test_mpc.launch.py  trajectory_following.launch.py  trajectory_following_vrx.launch.py
follower_ws/src/trajectory_following/launch/demo/: trajectory_following_vrx_demo-0.launch.py  trajectory_following_vrx_demo-18.launch.py  trajectory_following_vrx_demo-2.launch.py  trajectory_following_vrx_demo-4.launch.py  trajectory_following_vrx_demo-56.launch.py  trajectory_following_vrx_demo-6.launch.py  trajectory_following_vrx_demo-75.launch.py  trajectory_following_vrx_demo-8.launch.py  trajectory_following_vrx_demo_optimal.launch.py
follower_ws/src/trajectory_following/src/: trajectory_following.cpp  trajectory_following_node.cpp
idan_driver_ws/idan_driver/: CMakeLists.txt
idan_driver_ws/idan_driver/include/additional_msgs/: CMakeLists.txt
idan_driver_ws/idan_driver/include/additional_msgs/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/include/additional_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/additional_msgs/msg/: TrajectoryArray.idl
idan_driver_ws/idan_driver/include/autoware_auto_msgs/: .gitlab-ci.yml
idan_driver_ws/idan_driver/include/autoware_auto_msgs/additional_msgs/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/include/autoware_auto_msgs/additional_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/autoware_auto_msgs/additional_msgs/msg/: Friction.idl
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_debug_msgs/: CMakeLists.txt
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_debug_msgs/msg/: Float32MultiArrayStamped.idl  Float32Stamped.idl  Float64MultiArrayStamped.idl  Int32MultiArrayStamped.idl  Int64MultiArrayStamped.idl  Int64Stamped.idl  StringStamped.idl
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_geometry_msgs/: CMakeLists.txt  package.xml
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_msgs/design/: autoware_auto_msgs-design.md
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_msgs/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_perception_msgs/: CMakeLists.txt  package.xml
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_perception_msgs/msg/: ObjectClassification.idl  TrackedObject.idl
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_planning_msgs/: CMakeLists.txt  package.xml
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_planning_msgs/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_planning_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_planning_msgs/msg/: Approval.idl
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_vehicle_msgs/: CMakeLists.txt
idan_driver_ws/idan_driver/include/autoware_auto_msgs/autoware_auto_vehicle_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/autoware_auto_msgs/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/include/autoware_auto_msgs/log/: latest_build
idan_driver_ws/idan_driver/include/can_communication_titan/: LinuxCAN_API.h  LinuxCAN_API_x64.h
idan_driver_ws/idan_driver/include/listener/: listener.hpp
idan_driver_ws/idan_driver/install/: local_setup.sh  setup.sh
idan_driver_ws/idan_driver/launch/: idan.launch.py
idan_driver_ws/idan_driver/log/: latest_build
idan_driver_ws/idan_driver/src/can_communication_titan/: can_communication_node.cpp  titan_can.cpp
idan_driver_ws/idan_driver/src/listener/: listener.cpp
idan_driver_ws/idan_driver/src/sender/: sender.cpp  sender_lib.cpp
mobileLab-idan-example-main/src/idan_control_example/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mobileLab-idan-example-main/src/idan_control_example/launch/: idanControl.launch
mobileLab-idan-example-main/src/idan_control_example/src/: Frame.h  idan.cpp  idan.h  idan_node.cpp
(+1324 files in other folders)
