<?xml version="1.0"?>
<package format="2">
  <name>idan_control_example</name>
  <version>0.0.0</version>
  <description>The ariel idan package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="razgavrieli@gmail.com">fofo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
</package>